--- a/index.html
+++ b/index.html
@@ -4,9 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Document</title>
+    <title>Timer</title>
   </head>
   <body>
+    <input id="duration" />
+    <button id="start">Start</button>
+    <button id="pause">Pause</button>
     <script src="app.js"></script>
   </body>
 </html>
